fix navbar to not allow user to click on the background when hamburger menu open on mobile

--- a/styles/Nav.module.scss
+++ b/styles/Nav.module.scss
@@ -54,6 +54,8 @@
   .nav_menu {
     background-color: $primary-color-two;
     flex-direction: column;
+    height: 100%;
+    justify-content: flex-start;
     position: fixed;
     right: -100%;
     top: 3.5rem;
